2007-04-01  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Codecs/Bach.cpp, Atlas/Codecs/Packed.cpp, Atlas/Codecs/XML.cpp:
	  Add C stdlib include to get atol. Not previously requires as some
	  compilers included this inside the STL headers.

	* Atlas/Net/Stream.cpp, Atlas/Codecs/Bach.cpp,
	  Atlas/Codecs/Packed.cpp, Atlas/Codecs/XML.cpp:
	  Re-code the parsing state machines for negotiation and codecs
	  so they are more efficient.

2007-01-12  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Message/Makefile.am: Remove Layer.h from the distribution.

2006-10-28  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/AttributeInfo.py, Atlas/Objects/GenerateDecoder.py,
	  Atlas/Objects/GenerateDispatcher.py,
	  Atlas/Objects/GenerateForward.py,
	  Atlas/Objects/GenerateObjectFactory.py, Atlas/Objects/common.py,
	  Atlas/Objects/flag.cpp, Atlas/Objects/gen_cpp.py:
	  Add RCS Id keywords to all python code generators, for better
	  version tracking.

2006-10-28  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Bridge.cpp, Atlas/Codec.cpp, Atlas/EncoderBase.cpp,
	  Atlas/Exception.cpp, Atlas/Factory.cpp, Atlas/Filter.cpp,
	  Atlas/Formatter.cpp, Atlas/Negotiate.cpp, Atlas/Codecs/Bach.cpp,
	  Atlas/Codecs/Packed.cpp, Atlas/Codecs/Utility.cpp,
	  Atlas/Codecs/XML.cpp, Atlas/Codecs/XMLish.cpp,
	  Atlas/Filters/Bzip2.cpp, Atlas/Filters/Gzip.cpp,
	  Atlas/Funky/FEncoder.cpp, Atlas/Message/DecoderBase.cpp,
	  Atlas/Message/Element.cpp, Atlas/Message/Layer.cpp,
	  Atlas/Message/MEncoder.cpp, Atlas/Message/QueuedDecoder.cpp,
	  Atlas/Net/Loopback.cpp, Atlas/Net/Stream.cpp,
	  Atlas/Objects/BaseObject.cpp, Atlas/Objects/Encoder.cpp,
	  Atlas/Objects/SmartPtr.cpp, Atlas/Objects/loadDefaults.cpp:
	  Add RCS Id keywords to all non-generated bodies, for better
	  version tracking.

2006-10-28  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Bridge.h, Atlas/Codec.h, Atlas/Codec_impl.h, Atlas/Debug.h,
	  Atlas/EncoderBase.h, Atlas/Exception.h, Atlas/Factory.h,